@@ -8,8 +8,7 @@ For version 1.4:
 - Support for filename searches in the file browser.
 - Undo/Redo key?
 - Rebindable keys?
-- Keystroke to implement "Add next sequence as raw" like vi's ^V.
-  [DONE for edit window, needs to be done for statusbar prompt]
+- Keystroke to implement "Add next sequence as raw" like vi's ^V. [DONE]
 - Spell check selected text only. [DONE]
 - Make "To Line" (^W^T) and "Read from Command" (^R^X) reenter their
   parent menu when their keystroke is entered a second time (^W^T^T and
